# hanni

./: .env.example  .gitignore  .mcp.json  CLAUDE.md  TASKS.md  api_server.py  blocker.py  bot.py  bot_autonomous.py  bot_voice.py  config.json  data_collector.py  design-system.html  finetune.py  projects.yaml  sleep_mode.py  start_hanni.sh  voice_app.py
.claude/: settings.json
.claude/agents/: hanni-verify.md
.claude/skills/add-action/: SKILL.md
.claude/skills/add-command/: SKILL.md
.claude/skills/add-tab/: SKILL.md
.claude/skills/architect/: SKILL.md
.claude/skills/changelog/: SKILL.md
.claude/skills/db-migrate/: SKILL.md
.claude/skills/debug/: SKILL.md
.claude/skills/debug-llm/: SKILL.md
.claude/skills/design/: SKILL.md
.claude/skills/devops/: SKILL.md
.claude/skills/docs/: SKILL.md
.claude/skills/finetune/: SKILL.md
.claude/skills/improve/: SKILL.md
.claude/skills/perf/: SKILL.md
.claude/skills/product/: SKILL.md
.claude/skills/qa/: SKILL.md
.claude/skills/refactor/: SKILL.md
.claude/skills/release/: SKILL.md
.claude/skills/security/: SKILL.md
.claude/skills/sprint/: SKILL.md
.github/workflows/: release-android.yml  release.yml
agent/: __init__.py  cli.py  core.py  google_tools.py  homefit_tools.py  lifetracker_tools.py  memory.py  tools.py
agent/memory_data/: test_facts.json  test_history.json
apps/guest-cloud/: firebase-config.js  index.html
apps/guest-cloud/css/: guest.css
apps/guest-cloud/js/: fridge-shared.js  guest-cloud.js  guest.js  guest_fridge.js  guest_meal_plan.js  guest_memory.js  guest_products.js  guest_recipe_add.js  guest_recipes.js  recipe-shared-ingredients.js  recipe-shared.js
apps/jobs-extension/: .gitignore  README.md  background.js  content.js  hh-sync.js  manifest.json  panel.css  parser.js  popup.html  popup.js  sidepanel.html  sidepanel.js
chat/: README.md  voice_server.py
chat/css/: call.css  chat.css
chat/js/: chat-input.js  chat-overlay.js  chat-render.js  chat-settings.js  chat-stream.js  chat.js
chat/rust/: chat.rs  prompts.rs
chat/rust/proactive/: actions.rs  loop_runner.rs  mod.rs  settings.rs  triggers.rs
chat/rust/voice/: call_mode.rs  mod.rs  recording.rs  tts.rs  wakeword.rs
desktop/: dev-server.py  finetune.py  package-lock.json  package.json  voice_server.py
desktop/finetune_data/: prepare_data.py  synthetic_examples.jsonl
desktop/hanni-mcp/: CLAUDE.md  requirements.txt  server.py
desktop/src/: CLAUDE.md  focus-overlay.html  hljs-theme.css  index.html  main.js  styles.css  tauri-mock.js  test.html
desktop/src-tauri/: .gitignore  CLAUDE.md  Cargo.toml  Info.plist  tauri.android.conf.json  tauri.conf.json
desktop/src-tauri/android-plugin/src/main/java/com/sultanjakhan/hanni/: BackgroundSyncPlugin.kt  HanniHealthWorker.kt  HealthConnectPlugin.kt  HealthConnectReaders.kt
desktop/src-tauri/capabilities/: default.json  mobile.json
desktop/src-tauri/icons/: icon.icns
desktop/src-tauri/src/: agent.rs  android_update.rs  api_jobs.rs  bg_sync.rs  calendar.rs  calendar_health.rs  chat.rs  commands_api.rs  commands_contacts.rs  commands_data.rs  commands_flywheel.rs  commands_focus.rs  commands_food.rs  commands_meta.rs  commands_money.rs  commands_programs.rs  commands_share.rs  commands_shopping.rs  commands_sports.rs  commands_system.rs  commands_timeline.rs  commands_timeline_today.rs  commands_updater.rs  dashboard.rs  db.rs  event_categories.rs  firestore_admin.rs  google_auth.rs  health_connect.rs  health_connect_plugin.rs  health_import.rs  lan_sync.rs  lib.rs  macos.rs  mcp.rs  memory.rs  memory_embed.rs  mlx_manager.rs  notes.rs  pm_matrix.rs  (+45 more)
desktop/src-tauri/src/share_assets/: guest.css  guest.html  guest.js  guest_firestore.js  guest_fridge.js  guest_meal_plan.js  guest_memory.js  guest_products.js  guest_recipe_add.js  guest_recipe_ingredients.js  guest_recipe_steps.js  guest_recipes.js
desktop/src-tauri/src/sports_seed/: exercises.json
desktop/src/css/: android-update.css  base.css  body.css  call.css  chat.css  database-view.css  emoji-picker.css  food-cook-mode.css  layout.css  mobile-tabs.css  mobile.css  routine.css  settings.css  tabs-data.css  (+2 more)
desktop/tools/: auto-reload.mjs  auto-reload.sh  dev.sh  post_edit_check.sh  screenshot.sh
docs/: AGENT_ROUTING.md  MODULE_MAP.md  README.md  cell-types-audit.md
docs/architecture/: AUDIT-v0.18.md  CHANGELOG-v0.18.0.md  COVERAGE.md  DISPUTED.md  IMPROVEMENTS-v0.18.md  SPLIT-PLAN.md  WIKI.md  firebase-off-plan.md  firebase-off-tier3-github.md  quick-reference.md
docs/projects/: README.md  calendar.md  chat.md  dankoe.md  development.md  focus.md  food.md  health.md  hobbies.md  home.md  mindset.md  money.md  notes.md  overview.md  people.md  projects.md  schedule.md  screen-time.md  sports.md  work.md
docs/prompts/: PHASE1_PROMPT.md  PHASE2_PROMPT.md  PHASE3_PROMPT.md
firebase/: .firebaserc  README.md  firebase.json  firestore.indexes.json  firestore.rules
mobile/: App.js  app.json  package-lock.json  package.json
pc/: tts_server.py
scripts/: claude_distill.sh  com.hanni.nightly-train.plist  firebase-setup.sh  firebase_hosting_deploy.py  generate_training_data.py  nightly_train.sh  publish-web-update.sh  release.sh
scripts/lora-adapters/: adapter_config.json
scripts/lora-data/: train.jsonl  valid.jsonl
sync-worker/: package.json  schema.sql  wrangler.toml
sync-worker/src/: index.js
tg-bot/: .env.example  bot.py  db.py  parsers.py  requirements.txt
training_data/: all_conversations.jsonl  session_20260129_143916.jsonl  session_20260129_144239.jsonl  session_20260129_151819.jsonl  session_20260129_153637.jsonl  session_20260129_154759.jsonl  session_20260129_161645.jsonl  session_20260129_162628.jsonl  session_20260129_163413.jsonl
web/: app.py  index.html
(+345 files in other folders)
