[package]
name = "hanni"
version = "0.27.0"
description = "Hanni — personal AI assistant"
authors = ["sultanjakhan"]
edition = "2021"

[lib]
name = "hanni_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
tauri-plugin-fs = "2"
tauri-plugin-shell = "2"
tauri-plugin-updater = "2"
tauri-plugin-process = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
reqwest = { version = "0.13", features = ["json", "stream", "blocking"] }
tokio = { version = "1", features = ["full"] }
futures-util = "0.3"
chrono = { version = "0.4", features = ["serde"] }
chrono-tz = "0.10"
dirs = "6"
rusqlite = { version = "0.32", features = ["bundled"] }
regex = "1"
whisper-rs = "0.13"
cpal = "0.16"
hound = "3"
axum = "0.8"
tower = "0.5"
rand = "0.9"
uuid = { version = "1", features = ["v4"] }
voice_activity_detector = "0.2"
tauri-plugin-global-shortcut = "2"
tempfile = "3"
sqlite-vec = "0.1"
zerocopy = { version = "0.8", features = ["derive"] }
tauri-plugin-webdriver-automation = "0.1.3"
