[package]
name = "hanni"
version = "1.0.7"
description = "Hanni — personal AI assistant"
authors = ["sultanjakhan"]
edition = "2021"

[lib]
name = "hanni_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
tauri-plugin-fs = "2"
tauri-plugin-updater = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
reqwest = { version = "0.12", default-features = false, features = ["json", "stream", "blocking", "rustls-tls-webpki-roots", "http2", "charset"] }
tokio = { version = "1", features = ["full"] }
futures-util = "0.3"
chrono = { version = "0.4", features = ["serde"] }
chrono-tz = "0.10"
dirs = "6"
rusqlite = { version = "0.32", features = ["bundled", "load_extension"] }
regex = "1"
axum = "0.8"
tower = "0.5"
tower-http = { version = "0.6", features = ["cors"] }   # CORS for guests on Firebase Hosting
rand = "0.9"
uuid = { version = "1", features = ["v4", "v5", "v7"] }
tempfile = "3"
sqlite-vec = "0.1"
zerocopy = { version = "0.8", features = ["derive"] }
rmcp = { version = "1.2", features = ["client", "transport-child-process"] }
jsonwebtoken = "9"          # Firebase service-account JWT signing for cloud-share
sha2 = "0.10"               # owner_uid derivation from service-account email (Stage C)
hex = "0.4"
percent-encoding = "2"      # URL-encode OAuth params (Stage C.1 Google Auth)
subtle = "2.5"              # constant-time byte comparison for API token (AUTO-001)
chacha20poly1305 = "0.10"   # XChaCha20-Poly1305 AEAD for owner-sync E2E (Tier 3)
hmac = "0.12"               # HMAC-SHA256 for opaque sync file names (Tier 3)
base64 = "0.22"             # encode E2E blobs for GitHub Git Data API (Tier 3)
tar = "0.4"                 # extract OTA web-asset bundle (Android, web_assets.rs)
flate2 = "1"                # gunzip OTA web-asset bundle (Android, web_assets.rs)

# Desktop-only dependencies (not available on Android)
[target.'cfg(not(target_os = "android"))'.dependencies]
tauri-plugin-window-state = "2"   # remember window position/size across restarts (desktop only)
whisper-rs = "0.13"
cpal = "0.16"
hound = "3"
voice_activity_detector = "0.2"
tauri-plugin-global-shortcut = "2"

# Release size: the default profile ships an unstripped ~110-127MB binary (mostly
# debug symbols) → bloated .app/APK and expensive native updates. strip drops the
# symbols (~3-4× smaller); thin LTO trims a bit more at modest build cost.
# opt-level stays at the default 3 (speed) so the Rust backend isn't slowed.
[profile.release]
strip = true
lto = "thin"
